--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #fffcf2;
+  color: #fffcf2;
+  font-family: lato;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li {
+  height: max-content;
+  width: max-content;
+  padding: 10px;
+}
+
+.link:hover {
+  background-color: #333230;
+  cursor: pointer;
+}
+
+.upload-btn {
+  background-color: #eb5e28;
+  border-radius: 4px;
+}
+
+.upload-btn:hover {
+  cursor: pointer;
+  background-color: #e95115;
+}
+
+.nav-container {
+  background-color: #252422;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.nav-logo-container {
+  width: 182px;
+  height: 60px;
+  background-color: #403d39;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-links-container {
+  list-style: none;
+  display: flex;
+  column-gap: 50px;
+  align-items: center;
+  justify-content: center;
 }
