--- a/src/pages/PluginPage/pluginPage.css
+++ b/src/pages/PluginPage/pluginPage.css
@@ -28,10 +28,38 @@
   width: 50%;
   height: 500px;
   color: #403d39;
-  border: 1px solid green;
   margin-top: 15px;
   margin-bottom: 15px;
   display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.plugin-header-container {
+  background-color: #f9f9f9;
+  display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  border-radius: 4px;
+}
+
+.plugin-body {
+  background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-radius: 4px;
+  height: 240px;
+}
+
+.plugin-footer {
+  background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-radius: 4px;
+  height: 400px;
 }
