--- a/src/pages/PluginPage/pluginPage.css
+++ b/src/pages/PluginPage/pluginPage.css
@@ -1,23 +1,3 @@
-.nav-search-section {
-  background-color: #403d39;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60px;
-}
-
-.search-bar-container {
-  width: 70%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.plugin-search-input {
-  height: 30px;
-  border-radius: 4px;
-  border: none;
-}
-
 .plugin-section-container {
   display: flex;
   justify-content: center;
@@ -32,7 +12,8 @@
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
-  row-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 120px;
 }
 
 .plugin-header-container {
@@ -45,21 +26,82 @@
 }
 
 .plugin-body {
-  background-color: #f9f9f9;
   display: flex;
   justify-content: center;
   align-items: center;
+  column-gap: 5px;
   width: 100%;
+  height: 250px;
+}
+
+@media only screen and (max-width: 800px) {
+  .plugin-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 5px;
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  .plugin-body-image-container {
+    width: 100% !important;
+  }
+
+  .plugin-body-description {
+    width: 100% !important;
+  }
+
+  .plugin-footer {
+    width: 100% !important;
+  }
+
+  .plugin-data-container {
+    margin-bottom: 350px;
+  }
+}
+
+.plugin-body-image-container {
+  display: flex;
+  align-items: center;
+  background-color: #f9f9f9;
   border-radius: 4px;
-  height: 240px;
+  height: 100%;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.plugin-body-description {
+  width: 40%;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 3px;
+}
+
+.plugin-info-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 3px;
+}
+
+.plugin-download-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eb5e28;
+  border-radius: 4px;
+  color: #ffff;
+  width: 117px;
+  height: 45px;
+  border: none;
 }
 
 .plugin-footer {
-  background-color: #f9f9f9;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  border-radius: 4px;
-  height: 400px;
+  flex-direction: column;
+  row-gap: 8px;
+  width: 60%;
 }
