--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@ li {
   align-items: center;
 }
 
+.nav-logo-container {
+  cursor: pointer;
+}
+
 .nav-links-container {
   list-style: none;
   display: flex;
@@ -96,6 +100,7 @@ li {
   height: 100px;
   border-radius: 50%;
   image-rendering: pixelated;
+  object-fit: cover;
 }
 
 .plugin-rating {
