--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ li {
 }
 
 .nav-container {
-  background-color: #252422;
+  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: space-around;
