--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,18 @@
   right: 0;
   top: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: -10;
+  }
+
+  .overlay {
+    position: fixed;
+    width: 100vw; 
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: -1;
+    
   }
