Fixed logo issues

--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,17 @@ li {
   background-color: transparent;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  
+}
+
+.nav-inner {
+  width: 90%;
+  display: flex;
+  align-items: center;
   flex-wrap: wrap;
-  padding: 10px;
+  justify-content:space-between;
+  
 }
 
 .nav-logo-container {
