--- a/src/index.css
+++ b/src/index.css
@@ -44,16 +44,14 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  width: 100%;
 }
 
 .nav-inner {
   width: 90%;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   justify-content:space-between;
-  
 }
 
 .nav-logo-container {
@@ -72,8 +70,6 @@ li {
 .nav-links-container {
   list-style: none;
   display: flex;
-  column-gap: 80px;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
