--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,10 @@ body {
 }
 
 
-
-
-
 li {
   height: max-content;
   width: max-content;
-  padding: 10px;
+  
 }
 
 .logo {
@@ -43,36 +40,64 @@ li {
   background-color: transparent;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 100%;
 }
 
 .nav-inner {
-  width: 90%;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content:space-between;
 }
 
+@media only screen and (max-width: 600px) {
+  .nav-inner {
+    justify-content:center;
+    row-gap: 10px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .nav-inner {
+    justify-content:center;
+  }
+}
+
+@media only screen and (max-width: 956px) {
+  .nav-inner {
+    justify-content:center;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .nav-inner {
+    justify-content:center;
+  }
+}
+
+
+
+
+.nav-links-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 15px;
+}
+
 .nav-logo-container {
-  width: 182px;
-  height: 60px;
-  background-color: #403d39;
+
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .nav-logo-container {
   cursor: pointer;
 }
 
-.nav-links-container {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 
 .plugin-list {
   display: flex;
